# data-scientist-roadmap

./: Data Ingestion  Preprocessing  README.md  pyproject.toml
01_Fundamentals/: 16_regex.py  1_fundamentals.py  README.md
02_Statistics/: 2_descriptive-statistics.py  README.md
03_Programming/: 15_csv-example.csv  15_reading-csv.py  1_python-basics.py  21_install-pkgs.py  4_r_basics.R  README.md
04_Machine-Learning/: 01_Machine_Learning_Basics.ipynb  04_Supervised_Machine_Learning.ipynb  22_perceptron.py  README.md
04_Machine-Learning/05_Supervised_Learning_Algorithms/: 01. Linear Regression.ipynb  02. Logistic Regression.ipynb  03. Support Vector Machine (SVM).ipynb  04. Decision Trees.ipynb  05. Random Forest.ipynb  06. Naive Bayes Classifier.ipynb
04_Machine-Learning/Algorithms/: 01. Linear Regression.ipynb  (+1 more)
05_Text-Mining-NLP/: README.md
06_Data-Visualization/: 1_data-exploration.R  4_histogram-pie.R  README.md
07_Big-Data/: README.md
08_Data-Ingestion/: README.md
09_Data-Munging/: README.md
10_Toolbox/: README.md
10_工具箱/: README.md
1_Fundamentals/: 17_regex.py  1_fundamentals.py  README.md
1_基础知识/: 1_fundamentals.py  README.md
2_Statistics/: 2_descriptive-statistics.py  README.md
3_Programming/: 21_install-pkgs.py  README.md
3_编程/: 1_python-basics.py  4_r_basics.R
4_Machine-Learning/: 22_perceptron.py  4_histogram-pie.R  README.md
4_机器学习/: README.md
6_Data-Visualization/: README.md
6_数据可视化/: 1_data-exploration.R  README.md
7_Big-Data/: README.md
8_Data-Ingestion/: README.md
9_Data-Munging/: README.md
